log
Thu 21 Mar 2024 03:22:29 PM UTC: 
 tests:  0|5
total_score: 0/70
fdbfc76
Thu 21 Mar 2024 03:26:35 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: invalid type argument of unary ‘*’ (have ‘int’)
   49 |       *valor = malloc(sizeof(int));
      |       ^~~~~~
exercises.c:50:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |       push(L, valor);
      |               ^~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:52:17: error: expected expression before ‘List’
   52 |   imprime_lista(List *L);
      |                 ^~~~
cc1: all warnings being treated as errors
Compilation failed
54e1434
Thu 21 Mar 2024 03:26:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   49 |       valor = malloc(sizeof(int));
      |             ^
exercises.c:50:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |       push(L, valor);
      |               ^~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:52:17: error: expected expression before ‘List’
   52 |   imprime_lista(List *L);
      |                 ^~~~
cc1: all warnings being treated as errors
Compilation failed
3988773
Thu 21 Mar 2024 03:27:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   49 |       valor = malloc(sizeof(int));
      |             ^
exercises.c:50:7: error: invalid type argument of unary ‘*’ (have ‘int’)
   50 |       *valor = i;
      |       ^~~~~~
exercises.c:51:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   51 |       push(L, valor);
      |               ^~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
74e688f
Thu 21 Mar 2024 03:27:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
9487ae4
Thu 21 Mar 2024 03:31:12 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:26: error: expected expression before ‘List’
   63 |   void *elemento = first(List *L);
      |                          ^~~~
exercises.c:67:23: error: expected expression before ‘List’
   67 |       elemento = next(List *L);
      |                       ^~~~
exercises.c:62:22: error: unused variable ‘i’ [-Werror=unused-variable]
   62 |   int sumatoria = 0, i;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
ce223fe
Thu 21 Mar 2024 03:31:47 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:22: error: unused variable ‘i’ [-Werror=unused-variable]
   62 |   int sumatoria = 0, i;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
dc76d71
Thu 21 Mar 2024 03:31:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
29d8132
Thu 21 Mar 2024 03:33:30 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
5dcb2b7
Thu 21 Mar 2024 03:35:10 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
1a9a7cf
Thu 21 Mar 2024 03:37:05 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:14: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
  104 |   while(dato != NULL)
      |              ^
cc1: all warnings being treated as errors
Compilation failed
6b45f48
Thu 21 Mar 2024 03:37:55 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
5d7b005
Thu 21 Mar 2024 03:41:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d684fc3
Thu 21 Mar 2024 03:42:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:17: error: implicit declaration of function ‘Front’ [-Werror=implicit-function-declaration]
  104 |   while((dato = Front(P1)) != NULL)
      |                 ^~~~~
exercises.c:104:15: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  104 |   while((dato = Front(P1)) != NULL)
      |               ^
cc1: all warnings being treated as errors
Compilation failed
17bafe9
Thu 21 Mar 2024 03:43:33 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:106:17: error: implicit declaration of function ‘Front’ [-Werror=implicit-function-declaration]
  106 |   while((dato = Front(Paux)) != NULL)
      |                 ^~~~~
exercises.c:106:15: error: assignment to ‘void *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  106 |   while((dato = Front(Paux)) != NULL)
      |               ^
cc1: all warnings being treated as errors
Compilation failed
c9862e8
Thu 21 Mar 2024 03:43:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
85385b0
Thu 21 Mar 2024 03:44:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:10: error: unused variable ‘Paux2’ [-Werror=unused-variable]
  103 |   Stack* Paux2 = create_stack();
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0c2f181
Thu 21 Mar 2024 03:44:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
26e694b
Thu 21 Mar 2024 03:44:48 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
02871ed
